--- a/yoga_bot/Dockerfile
+++ b/yoga_bot/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.12.3
 WORKDIR /yoga-bot
 COPY . /yoga-bot
+ENV FLASK_APP=yoga_bot.py
+ENV FLASK_RUN_HOST=0.0.0.0
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-CMD ["python", "pipeline.py"]
+EXPOSE 8001
+CMD ["flask", "run"]
