--- a/yoga_bot/requirements.txt
+++ b/yoga_bot/requirements.txt
@@ -1,4 +1,5 @@
 accelerate==0.31.0
+async-timeout==4.0.3
 blinker==1.8.2
 certifi==2024.6.2
 charset-normalizer==3.3.2
@@ -8,18 +9,21 @@ Flask==3.0.3
 fsspec==2024.6.0
 huggingface-hub==0.23.4
 idna==3.7
+importlib_metadata==7.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 mpmath==1.3.0
-networkx==3.3
-numpy==1.26.4
+networkx==3.2.1
+numpy==2.0.0
 packaging==24.1
 psutil==5.9.8
 PyYAML==6.0.1
+redis==3.5.3
 regex==2024.5.15
 requests==2.32.3
 safetensors==0.4.3
+six==1.16.0
 sympy==1.12.1
 tokenizers==0.19.1
 torch==2.3.1
@@ -28,3 +32,4 @@ transformers==4.41.2
 typing_extensions==4.12.2
 urllib3==2.2.1
 Werkzeug==3.0.3
+zipp==3.19.2
