--- a/yoga_bot/generate_yoga/Dockerfile
+++ b/yoga_bot/generate_yoga/Dockerfile
@@ -1,9 +1,8 @@
 FROM python:3.12.3
-WORKDIR /yoga-bot
-COPY . /yoga-bot
-ENV FLASK_APP=yoga_bot.py
+WORKDIR /generate_yoga
+COPY . .
+ENV FLASK_APP=generate_yoga.py
 ENV FLASK_RUN_HOST=0.0.0.0
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-EXPOSE 8001
 CMD ["flask", "run"]
