--- a/yoga_bot/call_model/Dockerfile
+++ b/yoga_bot/call_model/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /call_model
 COPY . .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-CMD ["python3", "call_model.py"]
+RUN chmod +x call_model.py
+CMD ["python", "-u", "call_model.py"]
